8075466: SATB queue pre-filter verify found reclaimed humongous object

Removed pre-filter verify, and made filtering more careful.

Reviewed-by: brutisso, tschatzl